--- a/index.html
+++ b/index.html
@@ -219,10 +219,9 @@
         <div class="col">
           <div class="card h-100 shadow custom-card">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="100%" height="315" src="https://www.youtube.com/embed/ijtmZ_Q3UEk"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+              <video width="100%" height="315" src="videos/historia.mp4" controls>
+
+              </video>
             </div>
             <div class="card-body">
               <h4 class="card-title">Hora da história</h4>
@@ -235,10 +234,9 @@
         <div class="col">
           <div class="card h-100 shadow custom-card">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="100%" height="315" src="https://www.youtube.com/embed/tr2H2d0PGnc"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+              <video width="100%" height="315" src="videos/brincadeira.mp4" controls>
+
+              </video>
             </div>
             <div class="card-body">
               <h4 class="card-title">Hora da brincadeira</h4>
@@ -251,10 +249,9 @@
         <div class="col">
           <div class="card h-100 shadow custom-card">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="100%" height="315" src="https://youtube.com/embed/NRp-Qgo6Br4?feature=share"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+              <video width="100%" height="315" src="videos/educar.mp4" controls>
+
+              </video>
             </div>
             <div class="card-body">
               <h4 class="card-title">Vamos aprender</h4>
